Ex 3.2 in CGAL book

--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(data_structures)
 add_subdirectory(tests)
 add_subdirectory(cgal/yolk)
 add_subdirectory(cgal/cgal_book/ex_2_1)
+add_subdirectory(cgal/cgal_book/ex_3_2)
