Added algorithm to approximate the centerpoint of a point set

--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.15)
 project(data_structures)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(data_structures)
 add_subdirectory(tests)
+add_subdirectory(cgal/centerpoint)
 add_subdirectory(cgal/yolk)
 add_subdirectory(cgal/cgal_book/ex_2_1)
 add_subdirectory(cgal/cgal_book/ex_3_2)
