--- a/c++/data_structures/CMakeLists.txt
+++ b/c++/data_structures/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(graph graph.cpp)
 target_include_directories(graph PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(data_structures_xc main.cpp graph.cpp)
+add_executable(data_structures main.cpp graph.cpp)
